LIBITD-2254. Customized Alembic configuration for PATSy "database" arg
Added a "get_database_connection_url" method to "patsy/database.py" to
centralize parsing of the database URL connection string, so that
Alembic could use the same database URL connection construction as
PATSy.

Modified the "use_database_file" method in "patsy/database.py" to use
the "get_database_connection_url" method. In the "database_helper"
method, renamed the "database" parameter to "database_connection_url"
to improve readability.

Modified the stock Alembic configuration files so that:

* The "PATSY_DATABASE" environment variable would be used by Alembic
* A "-x database" command-line argument could be passed to the
  "alembic" command to set the database connection URL
* The "get_database_connection_url" method in "patsy/database.py" is
  used to parse either the "PATSY_DATABASE" environment variable or
  the "-x database" command-line argument
* Modified the Alembic logging to output DEBUG log statements from
  PATSy code (this seems to be the default for PATSy), and changed the
  log format to the PATSy default.

Added "Database Migrations" section to the README.md file.

https://umd-dit.atlassian.net/browse/LIBITD-2254

--- a/alembic.ini
+++ b/alembic.ini
@@ -85,7 +85,10 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+# UMD Customization
+# level = DEBUG
+level = DEBUG
+# End UMD Customization
 handlers = console
 qualname =
 
@@ -106,5 +109,9 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(levelname)-5.5s [%(name)s] %(message)s
-datefmt = %H:%M:%S
+# UMD Customization
+# format = %(levelname)-5.5s [%(name)s] %(message)s
+# datefmt = %H:%M:%S
+  format = %(asctime)s - %(levelname)-5.5s - [%(name)s] - %(message)s
+  datefmt = %Y-%m-%d %H:%M:%S
+# End UMD Customization
