LIBITD-2254. Configured Alembic to support auto-generation of migrations
Updated "alembic/env.py" with declarative base for model, to support
auto-generation of migrations.

Commented out "sqlalchemy.url" in "alembic.ini", as it is unused.

Added information about auto-migration to the README.md file.

https://umd-dit.atlassian.net/browse/LIBITD-2254

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,13 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+# UMD Customization
+# sqlalchemy.url = driver://user:pass@localhost/dbname
+# "sqlalchemy.url" is not used. Instead, use the "PATSY_DATABASE" environment
+# variable, or directly specify using the "-x database=<DATABASE>" flag, with
+# <DATABASE> being the same value passed to the "--database" argument for
+#  PATSy commands.
+# End UMD Customization
 
 
 [post_write_hooks]
